@@ -3,9 +3,10 @@
  - armv5 build static and dynamic
  - powerpc build
  - ReplayGain available for raw audio only (pcm, aif)
- - add aif as a default codec
+ - add aif as an accepted codec
  - in CastLoad, MediaSession must be reset 
  - ON/OFF fully cleans any pending response as, in some cases, CC does not respond to a STOP
+ - Corrected memory leak when no matching codec was found
  
 0.1.2.0
  - Always gather metadata from LMS, <send_metadata> only stops sending of coverart, album, artist and title 
